--- a/css/header.sass
+++ b/css/header.sass
@@ -8,10 +8,16 @@ header
 	background: #161a1b
 	font-family: 'Roboto', sans-serif
 	.wrap-access-type
-		#input-access-type
-			width:150px
+		width: 180px
+		height: 48px
+		input
+			width: 150px
 			height: 48px
 			display: none
+			background: transparent
+			border: none
+			margin-left: 20px
+			color: #71797c
 		.access-type
 			width: 480px
 			height: 48px 
@@ -81,7 +87,7 @@ header
 				&:hover
 					color: #f4f750
 				display: inline-block
-				transition: color, 1s, easy
+				transition: color, 0.5s, easy
 				.fa-font 
 					font-size: 1.4rem 
 				.fa-plus
