--- a/css/content.sass
+++ b/css/content.sass
@@ -1,12 +1,13 @@
 main
 	font-family: 'Roboto', sans-serif
 	box-sizing: border-box
-	max-width: 1180px
-	min-width: 640px
 	.navigation
 		width: 100%
-		height: 72px
+		// height: 72px
+		position: relative
+		z-index: 1
 		.menu
+			perspective: 1000px
 			width: 1000px
 			// float: right
 			right: -240px
@@ -16,17 +17,58 @@ main
 				text-align: right
 				width: 100%
 				box-sizing: border-box
+				.inner-wrapper
+					display: inline-block
+					position: relative
 				li
 					display: inline-block
 					width: 100px
-					height: 50px
+					height: 36px
+					line-height: 36px
+					transition: background .3s
+					cursor: pointer
+					text-align: center
+					text-transform: uppercase
+					font-weight: bold
+					font-size: .88rem
+					letter-spacing: 1px
+					vertical-align: middle
+
+					.menu__popup
+						transform-origin: center top
+						transform: rotateX(-87deg)
+						overflow: hidden
+						display: inline-block
+						position: absolute
+						left: 0
+						top: 36px
+						background: #dcdf3c
+						visibility: hidden
+						transition: visibility 0s linear 0.3s, transform 0.3s
+						z-index: 2
+
 					&:hover
-						ul
-							div
-								// display: block
-					ul
-						div
-							display: none
+						background: #dcdf3c
+						.menu__popup
+							visibility: visible;
+							transform: rotateX(0)
+							transition: visibility 0s linear 0s,  transform 0.3s
+							z-index: 3
+
+					a
+						text-decoration: none
+						color: #000
+				// li
+				// 	display: inline-block
+				// 	width: 100px
+				// 	height: 50px
+				// 	&:hover
+				// 		ul
+				// 			div
+				// 				// display: block
+				// 	ul
+				// 		div
+				// 			display: none
 	.slider
 		position: relative
 		width: calc(100% - 260px)
@@ -233,9 +275,8 @@ main
 	.useful-info
 		padding-left: 60px
 		padding-top: 88px
-		padding-bottom: 60px
 		width: calc(100% - 260px)
-		height: 474px
+		height: 600px
 		box-sizing: border-box
 		h2
 			padding-left: 0
@@ -315,6 +356,8 @@ main
 				border: 2px solid #c6c6b9
 				font-size: 1rem
 				font-weight: 600
+			select
+				width: 544px
 			input::-webkit-input-placeholder
 				color: black
 				opacity: 1
@@ -322,6 +365,8 @@ main
 			input[type="submit"]
 				border: 2px solid #dcdf3c
 				background: white
+				box-sizing: border-box
+				width: 544px
 	.master-card
 		width: calc(100% - 260px)
 		height: 300px
@@ -383,10 +428,27 @@ main
 	border: 1px solid red!important
 
 em.error 
-	color: #ccc
+	color: #f45336
 	border: none!important
 	float: right
-	font-size: 12px
+	font-size: 1rem
 	display: inline-block
 	top: -20px
+	right: 10px
 	position: relative
+// search 
+.search
+	text-align: left !important
+	input
+		display: block !important
+	li
+		height: auto !important
+		width: 33% !important
+	ul
+		display: inline-block !important
+		text-align: left !important
+		border: 1px solid
+		float: left
+		li
+			height: auto !important
+			text-align: left !important
