--- a/css/footer.sass
+++ b/css/footer.sass
@@ -9,63 +9,65 @@ footer
 		margin: 0 auto
 		padding-top: 55px
 		height: 252px
-		margin-left: 60px
+		display: inline-block
 		.helpful-link
-			width: 350px
+			display: inline-block
+			width: 24%
 			float: left
+			list-style: none
+			margin: 0
+			padding: 0
+			margin-left: 60px
 			.title-helpful-link
 				font-size: 0.857rem
 				font-weight: 600
 				color: #4b5153
-				padding-bottom: 20px
 			.different-services
-				span
-					display: block
-					color: #fff
-					line-height: 28px
-					font-size: 1rem
-					cursor: pointer
-					transition: color, 1s, easy-in-out
-					&:hover
-						color: #dcdf3c
-			.mark
-				font-size: 0.714rem
-				font-weight: 600
-				color: #4b5153
 				display: block
-				padding-top: 50px
-			.license
-				font-size: 0.785rem
-				font-weight: 400
-				color: #4b5153
-				display: block
-				padding-top: 5px
+				color: #fff
+				line-height: 28px
+				font-size: 1rem
+				cursor: pointer
+				transition: color, 1s, easy-in-out
+				&:hover
+					color: #dcdf3c
 		.info-contact 
-			width: 240px
+			display: inline-block
+			width: 20%
 			float: left
-			span
+			list-style: none
+			margin: 0
+			padding: 0
+			margin-left: 60px
+			li
 				display: block
 				&:first-child
 					font-size: 0.857rem
 					font-weight: 600
 					color: #4b5153
-				&:nth-child(2n)
-					color: white
-					font-size: 1.285rem
-					font-weight: 600
-					margin-top: 20px
-				&:nth-child(3)
+				&:nth-child(4)
 					font-size: 0.928rem
 					font-weight: 400
 					color: #4b5153
+					line-height: 18px
+			.ph
+				color: white
+				font-size: 1.5rem
+				font-weight: 600
+				font-family: 'PT Sans', sans-serif
 		.footer-link
-			width: 220px
+			display: inline-block
+			width: 18%
 			float: left
-			span
+			list-style: none
+			margin: 0
+			padding: 0
+			margin-left: 60px
+			li
 				font-size: 0.857rem
 				font-weight: 600
 				color: #4b5153
-				display: block
+				display: inline-block
 			i
 				display: inline-block
 				font-size: 2.4rem
@@ -78,6 +80,24 @@ footer
 					color: #dcdf3c 
 				&:last-child
 					font-size: 2.6rem
+		.label
+			width: 100%
+			clear: both
+			padding-bottom: 30px
+			list-style: none
+			margin: 0
+			padding: 0
+			margin-left: 60px
+			line-height: 11px
+			.mark
+				font-size: 0.8rem
+				font-weight: 600
+				color: #4b5153
+			.license
+				font-size: 0.8rem
+				font-weight: 400
+				color: #4b5153
+
 
 
 
