Added hover effects

--- a/css/aside.sass
+++ b/css/aside.sass
@@ -151,7 +151,7 @@ aside
 		margin: 0
 		padding: 0
 		line-height: 25px
-		height: 100px
+		height: 110px
 		position: fixed
 		bottom: 0
 		right: 0
@@ -161,7 +161,7 @@ aside
 			font-size: 0.857rem
 			font-weight: 600
 			padding-left: 50px
-
+			padding-bottom: 10px
 		.telephone
 			color: white
 			font-size: 1.571rem
