--- a/api/css/style.css
+++ b/api/css/style.css
@@ -207,7 +207,7 @@ aside .contacts {
   margin: 0;
   padding: 0;
   line-height: 25px;
-  height: 100px;
+  height: 110px;
   position: fixed;
   bottom: 0;
   right: 0;
@@ -219,6 +219,7 @@ aside .contacts .title-contacts {
   font-size: 0.857rem;
   font-weight: 600;
   padding-left: 50px;
+  padding-bottom: 10px;
 }
 
 aside .contacts .telephone {
@@ -550,6 +551,17 @@ main .table button {
   margin-left: 60px;
   border: 2px solid #7196da;
   background: transparent;
+  outline: none;
+  -webkit-transition: background, 1s, easy;
+  transition: background, 1s, easy;
+}
+
+main .table button:hover {
+  background: #7196da;
+}
+
+main .table button:active {
+  background: #557dc8;
 }
 
 main .loyalty-program {
@@ -728,6 +740,7 @@ main .application div button {
   background: white;
   margin-bottom: 43px;
   font-weight: 500;
+  outline: none;
 }
 
 main .application div button:nth-child(3) {
@@ -759,6 +772,7 @@ main .application div input {
   border: 2px solid #c6c6b9;
   font-size: 1rem;
   font-weight: 600;
+  outline: none;
 }
 
 main .application div select {
@@ -778,6 +792,17 @@ main .application div input[type="submit"] {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   width: 544px;
+  -webkit-transition: background, 1s, easy;
+  transition: background, 1s, easy;
+  outline: none;
+}
+
+main .application div input[type="submit"]:hover {
+  background: #dcdf3c;
+}
+
+main .application div input[type="submit"]:active {
+  background: #a8aa2a;
 }
 
 main .master-card {
@@ -982,7 +1007,7 @@ footer .wrapper-footer .info-contact .ph {
 
 footer .wrapper-footer .footer-link {
   display: inline-block;
-  width: 18%;
+  width: 25%;
   float: left;
   list-style: none;
   margin: 0;
@@ -997,29 +1022,29 @@ footer .wrapper-footer .footer-link li {
   display: inline-block;
 }
 
-footer .wrapper-footer .footer-link i {
-  display: inline-block;
-  font-size: 2.4rem;
-  color: #ebebeb;
-  padding-right: 10px;
-  padding-top: 15px;
-  cursor: pointer;
-  -webkit-transition: color, 1s, easy-in-out;
-  transition: color, 1s, easy-in-out;
+footer .wrapper-footer .footer-link li img {
+  width: 28px;
+  height: 28px;
+  background: white;
+  margin-right: 10px;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(50%, transparent), color-stop(50%, #dcdf3c), color-stop(50%, #dcdf3c));
+  background-image: -webkit-linear-gradient(top, transparent, transparent 50%, #dcdf3c 50%, #dcdf3c);
+  background-image: linear-gradient(to bottom, transparent, transparent 50%, #dcdf3c 50%, #dcdf3c);
+  ransition: all .25s ease-in;
+  background-position-y: 56px;
+  background-size: 56px;
+  -webkit-transition: all .25s ease-in;
+  transition: all .25s ease-in;
 }
 
-footer .wrapper-footer .footer-link i:hover {
-  color: #dcdf3c;
-}
-
-footer .wrapper-footer .footer-link i:last-child {
-  font-size: 2.6rem;
+footer .wrapper-footer .footer-link li img:hover {
+  background-position-y: 28px;
 }
 
 footer .wrapper-footer .label {
+  display: block;
   width: 100%;
   clear: both;
-  padding-bottom: 30px;
   list-style: none;
   margin: 0;
   padding: 0;
