--- a/css/aside.sass
+++ b/css/aside.sass
@@ -1,195 +1,200 @@
 aside 
-	width: 240px 
-	height: 100%
-	background: #212628
-	font-family: 'Roboto', sans-serif
-	box-sizing: border-box
-	clear: both
-	position: fixed
-	right: 0
-	z-index: 3
-	&:after
-		content: " "
-		display: block
+	.wrap-aside 
+		width: 240px 
+		height: 100%
+		background: #212628
+		font-family: 'Roboto', sans-serif
+		box-sizing: border-box
 		clear: both
-		width: 100%
-		height: 1px
-	.services 
-		list-style: none
-		margin: 0
-		padding: 0
-		.search-service
-			width: 240px
-			height: 48px
-			padding-left: 20px
-			float: right
-			box-sizing: border-box
-			position: fixed
-			top: 0
-			right: 0
-			background: #161a1b
-			line-height: 48px
-			i 
-				color: #dcdf3c
-				margin-right: 13px
-			input
-				background: transparent
-				color: #717779
-				border: none
-				font-size: 0.929rem
-				&:focus
-					outline: none
-			input::-webkit-input-placeholder
-				opacity: 1
-				transition: opacity 0.3s ease
-		.title
+		position: fixed
+		right: 0
+		z-index: 7
+		&:after
+			content: " "
 			display: block
-			height: 60px
+			clear: both
 			width: 100%
-			text-transform: uppercase
-			color: #4b5153
-			line-height: 60px
-			font-size: 1rem
-			font-weight: 600
-			padding-left: 50px
-			border-bottom: #2f3335 solid 1px
-		.login
-			height: 45px
-			line-height: 50px
-			border-bottom: #2f3335 solid 1px
-			cursor: pointer
-			transition: background, 0.2s, easy-in-out
-			display: block
-			a
-				text-decoration: none
-				width: 100%
-				background: url(../img/dashboard-sprites.png) no-repeat
-				background-position: 0px 0px
-				display: inline-block
-				padding-left: 50px
-				color: #dcdf3c
-				transition: color, 0.2s, easy-in-out
-			&:hover
-				background: #dcdf3c
-				a 
-					background-position: 0px -50px
-					color: black
-		.about-bank
-			a
-				width: 100%
-				text-decoration: none
-				color: #fff
-				line-height: 28px
-				font-size: 0.928rem
-				border-left: #b99dc4 solid 6px
-				padding-left: 50px
+			height: 1px
+		.services 
+			list-style: none
+			margin: 0
+			padding: 0
+			.search-service
+				width: 240px
+				height: 48px
+				padding-left: 20px
+				float: right
+				box-sizing: border-box
+				position: fixed
+				top: 0
+				right: 0
+				background: #161a1b
+				line-height: 48px
+				i 
+					color: #dcdf3c
+					margin-right: 13px
+				input
+					background: transparent
+					color: #717779
+					border: none
+					font-size: 0.929rem
+					&:focus
+						outline: none
+				input::-webkit-input-placeholder
+					opacity: 1
+					transition: opacity 0.3s ease
+			.title
 				display: block
-				background-image: linear-gradient(to left, transparent, transparent 50%, #b99dc4 50%, #b99dc4)
-				background-position: 100% 0
-				background-size: 200% 100%
-				transition: all .25s ease-in
-				&:hover
-					background-position: 0 0
-	.submenu
-		list-style: none
-		margin: 0
-		padding: 0
-		color: #fff
-		line-height: 30px
-		font-size: 0.928rem
-		border-bottom: #2f3335 solid 1px
-		display: block
-		.other-services
-			font-size: 0.857rem
-			font-weight: 60
-			color: #4b5153
-			padding-left: 46px
-		li
-			a
+				height: 60px
 				width: 100%
-				text-decoration: none
+				text-transform: uppercase
+				color: #4b5153
+				line-height: 60px
+				font-size: 1rem
+				font-weight: 600
 				padding-left: 50px
-				display: block
-				border-left: #fbaa69 solid 6px
-				color: white
-				background-image: linear-gradient(to left, transparent, transparent 50%, #fbaa69 50%, #fbaa69)
-				background-position: 100% 0
-				background-size: 200% 100%
-				transition: all .25s ease-in
-				&:hover
-					background-position: 0 0
-			&:nth-child(7)
 				border-bottom: #2f3335 solid 1px
-			&:nth-child(8)
-				list-style: none
-				margin: 0
-				padding: 0
+			.login
 				height: 45px
-				line-height: 45px
+				line-height: 50px
 				border-bottom: #2f3335 solid 1px
+				cursor: pointer
 				transition: background, 0.2s, easy-in-out
-				// padding-left: 40px
+				display: block
+				font-weight: bold
+				a
+					text-decoration: none
+					width: 100%
+					background: url(../img/dashboard-sprites.png) no-repeat
+					background-position: 0px 0px
+					display: inline-block
+					padding-left: 50px
+					color: #dcdf3c
+					transition: color, 0.2s, easy-in-out
+				&:hover
+					background: #dcdf3c
+					a 
+						background-position: 0px -50px
+						color: black
+			.about-bank
 				a
 					width: 100%
 					text-decoration: none
-					border: none
-					color: #dcdf3c
-					background: url(../img/dashboard-sprites.png) no-repeat
-					background-position: 0px -103px
-					display: inline-block
-					transition: color, 0.2s, easy-in-out
+					color: #fff
+					line-height: 28px
+					font-size: 0.928rem
+					border-left: #b99dc4 solid 6px
+					padding-left: 50px
+					display: block
+					background-image: linear-gradient(to left, transparent, transparent 50%, #b99dc4 50%, #b99dc4)
+					background-position: 100% 0
+					background-size: 200% 100%
+					transition: all .25s ease-in
+					font-weight: bold
 					&:hover
-						
+						background-position: 0 0
+		.submenu
+			list-style: none
+			margin: 0
+			padding: 0
+			color: #fff
+			line-height: 30px
+			font-size: 0.928rem
+			border-bottom: #2f3335 solid 1px
+			display: block
+			font-weight: bold
+			.other-services
+				font-size: 0.857rem
+				font-weight: bold
+				color: #4b5153
+				padding-left: 46px
+			li
+				a
+					width: 100%
+					text-decoration: none
+					padding-left: 50px
+					display: block
+					border-left: #fbaa69 solid 6px
+					color: white
+					background-image: linear-gradient(to left, transparent, transparent 50%, #fbaa69 50%, #fbaa69)
+					background-position: 100% 0
+					background-size: 200% 100%
+					transition: all .25s ease-in
+					&:hover
+						background-position: 0 0
+				&:nth-child(7)
+					border-bottom: #2f3335 solid 1px
+				&:nth-child(8)
+					list-style: none
+					margin: 0
+					padding: 0
+					height: 45px
+					line-height: 45px
+					border-bottom: #2f3335 solid 1px
+					transition: background, 0.2s, easy-in-out
+					// padding-left: 40px
+					a
+						width: 100%
+						text-decoration: none
+						border: none
+						color: #dcdf3c
+						background: url(../img/dashboard-sprites.png) no-repeat
+						background-position: 0px -103px
+						display: inline-block
+						transition: color, 0.2s, easy-in-out
+						&:hover
+							
+					&:hover
+						background: #dcdf3c
+						color: black
+						a
+							color: black
+							background-position: 0px -153px
+		.contacts
+			list-style: none
+			margin: 0
+			padding: 0
+			line-height: 25px
+			height: 110px
+			position: fixed
+			bottom: 0
+			right: 0
+			width: 240px
+			.title-contacts
+				color: #4b5153
+				font-size: 0.857rem
+				font-weight: 600
+				padding-left: 50px
+				padding-bottom: 10px
+			.telephone
+				color: white
+				font-size: 1.571rem
+				font-weight: 600
+				padding-left: 50px
+				background: url(../img/dashboard-sprites.png) no-repeat
+				background-position: 0px -215px
+				margin-bottom: 10px
+			.online-help
+				background: #161a1b
+				height: 50px
+				line-height: 50px
+				font-size: 1.142rem
+				transition: background, 0.5s, easy-in-out
+				width: 100%
+				a
+					width: 100%
+					text-decoration: none
+					background: url(../img/dashboard-sprites.png) no-repeat
+					background-position: 0px -315px
+					color: white
+					padding-left: 50px
+					transition: color, 0.2s, easy-in-out
 				&:hover
 					background: #dcdf3c
-					color: black
 					a
 						color: black
-						background-position: 0px -153px
-	.contacts
-		list-style: none
-		margin: 0
-		padding: 0
-		line-height: 25px
-		height: 110px
-		position: fixed
-		bottom: 0
-		right: 0
-		width: 240px
-		.title-contacts
-			color: #4b5153
-			font-size: 0.857rem
-			font-weight: 600
-			padding-left: 50px
-			padding-bottom: 10px
-		.telephone
-			color: white
-			font-size: 1.571rem
-			font-weight: 600
-			padding-left: 50px
-			background: url(../img/dashboard-sprites.png) no-repeat
-			background-position: 0px -215px
-		.online-help
-			background: #161a1b
-			height: 50px
-			line-height: 50px
-			font-size: 1.142rem
-			transition: background, 0.5s, easy-in-out
-			width: 100%
-			a
-				width: 100%
-				text-decoration: none
-				background: url(../img/dashboard-sprites.png) no-repeat
-				background-position: 0px -315px
-				color: white
-				padding-left: 50px
-				transition: color, 0.2s, easy-in-out
-			&:hover
-				background: #dcdf3c
-				a
-					color: black
-					background-position: 0px -366px
-			&:active
-				background: #c2c52e
+						background-position: 0px -366px
+				&:active
+					background: #c2c52e
 
 
