--- a/css/footer.sass
+++ b/css/footer.sass
@@ -9,15 +9,18 @@ footer
 		margin: 0 auto
 		padding-top: 55px
 		height: 252px
-		display: inline-block
+		display: block
+		margin-left: 60px
+		padding-bottom: 55px
+		ul
+			margin-left: 0px!important
+			margin-right: calc((100% - 920px)/6 )
 		.helpful-link
 			display: inline-block
 			width: 24%
 			float: left
 			list-style: none
-			margin: 0
 			padding: 0
-			margin-left: 60px
 			.title-helpful-link
 				font-size: 0.857rem
 				font-weight: 600
@@ -33,12 +36,10 @@ footer
 					color: #dcdf3c
 		.info-contact 
 			display: inline-block
-			width: 20%
+			width: 24%
 			float: left
 			list-style: none
-			margin: 0
 			padding: 0
-			margin-left: 60px
 			li
 				display: block
 				&:first-child
@@ -57,12 +58,10 @@ footer
 				font-family: 'PT Sans', sans-serif
 		.footer-link
 			display: inline-block
-			width: 25%
+			width: 24%
 			float: left
 			list-style: none
-			margin: 0
 			padding: 0
-			margin-left: 60px
 			li
 				font-size: 0.857rem
 				font-weight: 600
@@ -74,24 +73,11 @@ footer
 					background: white
 					margin-right: 10px
 					background-image: linear-gradient(to bottom, transparent, transparent 50%, #dcdf3c  50%, #dcdf3c )
-					ransition: all .25s ease-in;
+					transition: all .25s ease-in
 					background-position-y: 56px
 					background-size: 56px
-					transition: all .25s ease-in
 					&:hover
 						background-position-y: 28px
-			// i
-			// 	display: inline-block
-			// 	font-size: 2.4rem
-			// 	color: #ebebeb
-			// 	padding-right: 10px
-			// 	padding-top: 15px
-			// 	cursor: pointer
-			// 	transition: color, 1s, easy-in-out
-			// 	&:hover
-			// 		color: #dcdf3c 
-			// 	&:last-child
-			// 		font-size: 2.6rem
 		.label
 			display: block
 			width: 100%
@@ -99,7 +85,6 @@ footer
 			list-style: none
 			margin: 0
 			padding: 0
-			margin-left: 60px
 			line-height: 11px
 			.mark
 				font-size: 0.8rem
