--- a/api/css/style.css
+++ b/api/css/style.css
@@ -366,14 +366,20 @@ main .navigation .menu ul li .menu__popup {
   text-indent: 15px;
 }
 
-main .navigation .menu ul li .menu__popup ul li ul p {
+main .navigation .menu ul li .menu__popup p {
+  margin-left: -15px;
+  color: #a4a629;
+  padding: 10px 0;
+}
+
+main .navigation .menu ul li .menu__popup ul > li ul p {
   font-size: 0.85rem;
   color: #a8aa2a;
   font-weight: 600;
   padding-top: 10px;
 }
 
-main .navigation .menu ul li .menu__popup ul li ul li {
+main .navigation .menu ul li .menu__popup ul > li ul li {
   display: block;
   font-size: 1rem;
   width: 100%;
@@ -386,31 +392,43 @@ main .navigation .menu ul li .menu__popup ul li ul li {
   transition: all .25s ease-in;
 }
 
-main .navigation .menu ul li .menu__popup ul li ul li:hover {
+main .navigation .menu ul li .menu__popup ul > li ul li:hover {
   background-position: 0 0;
 }
 
-main .navigation .menu ul li .menu__popup ul li ul li a {
+main .navigation .menu ul li .menu__popup ul > li ul li a {
   font-weight: 600;
 }
 
-main .navigation .menu ul li .menu__popup ul li ul .last {
+main .navigation .menu ul li .menu__popup ul > li ul .last {
   margin-bottom: 10px;
+}
+
+main .navigation .menu ul li .menu__popup * {
+  padding: 0;
+  margin: 0;
+  max-width: 290px;
+  text-align: left;
 }
 
 main .navigation .menu ul li .menu__popup.deposit {
   width: 290px;
-  height: 315px;
+  height: 295px;
+}
+
+main .navigation .menu ul li .menu__popup.deposit ul li {
+  display: block;
+  margin-left: -15px;
 }
 
 main .navigation .menu ul li .menu__popup.deposit ul .butt {
-  padding-top: 20px;
+  padding-top: 15px;
   border-top: 1px solid #c2c52e;
   background-image: none;
+  margin-left: 0px;
 }
 
 main .navigation .menu ul li .menu__popup.deposit ul .butt a {
-  margin-left: 15px;
   display: block;
   margin-bottom: 20px;
   background: #c2c52e;
@@ -422,22 +440,96 @@ main .navigation .menu ul li .menu__popup.deposit ul .butt a {
   text-transform: none;
 }
 
+main .navigation .menu ul li .menu__popup.deposit ul .last {
+  margin-bottom: 10px;
+}
+
+main .navigation .menu ul li .menu__popup.cart {
+  width: 670px;
+}
+
+main .navigation .menu ul li .menu__popup.cart ul {
+  max-width: 100%;
+}
+
+main .navigation .menu ul li .menu__popup.cart .cart-first {
+  margin-left: -15px;
+}
+
+main .navigation .menu ul li .menu__popup.cart li {
+  max-width: 100%;
+  width: 100%;
+  height: auto;
+}
+
+main .navigation .menu ul li .menu__popup.cart li p {
+  margin-left: 0;
+}
+
+main .navigation .menu ul li .menu__popup.cart li li {
+  max-width: 100%;
+  width: 49%;
+  vertical-align: top;
+}
+
 main .navigation .menu ul li .menu__popup.search input {
   display: block !important;
+  padding: 5px 40px;
+  background: #dcdf3c;
+  outline: none;
+  border: none;
+  border-bottom: 1px solid #a4a629;
 }
 
 main .navigation .menu ul li .menu__popup.search .grid {
-  height: 500px;
+  min-height: 298px;
+  max-width: 100%;
 }
 
 main .navigation .menu ul li .menu__popup.search .grid .grid-item {
   display: block;
-  height: 500px;
+  height: auto;
+  float: left;
+  max-width: 33%;
+}
+
+main .navigation .menu ul li .menu__popup.search .grid .grid-item p {
+  margin-left: 0;
 }
 
 main .navigation .menu ul li .menu__popup.search .grid .grid-item ul li {
   height: auto !important;
-  width: 25% !important;
+}
+
+main .navigation .menu ul li .search-img-two {
+  width: 30px;
+  position: absolute;
+  position: absolute;
+  right: 10px;
+  top: 5px;
+  background: #c2c52e;
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+  -webkit-transition: background .2s;
+  transition: background .2s;
+}
+
+main .navigation .menu ul li .search-img-two:hover {
+  background: #f4f750;
+}
+
+main .navigation .menu ul li .search-img-one {
+  width: 18px;
+  position: absolute;
+  left: 10px;
+  top: 15px;
+}
+
+main .navigation .menu ul li #search {
+  width: 100%;
+  min-width: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 main .navigation .menu ul li:hover {
