--- a/css/content.sass
+++ b/css/content.sass
@@ -64,14 +64,18 @@ main
 						padding-left: 0px
 						width: 100%
 						text-indent: 15px
-						ul
-							li
+						p
+							margin-left: -15px
+							color: #a4a629
+							padding: 10px 0
+						ul > li
 								ul
 									p
 										font-size: 0.85rem
 										color: #a8aa2a
 										font-weight: 600
 										padding-top: 10px
+
 									li
 										display: block
 										font-size: 1rem
@@ -86,17 +90,24 @@ main
 											font-weight: 600
 									.last
 										margin-bottom: 10px
+					.menu__popup *
+						padding: 0
+						margin: 0
+						max-width: 290px
+						text-align: left
 					.menu__popup.deposit
 						width: 290px
-						height: 315px
+						height: 295px
 						ul
 							li
+								display: block
+								margin-left: -15px
 							.butt
-								padding-top: 20px
+								padding-top: 15px
 								border-top: 1px solid #c2c52e
 								background-image: none
+								margin-left: 0px
 								a
-									margin-left: 15px
 									display: block
 									margin-bottom: 20px
 									background: #c2c52e
@@ -106,18 +117,66 @@ main
 									text-align: center
 									line-height: 50px
 									text-transform: none
+							.last
+								margin-bottom: 10px
+					.menu__popup.cart
+						width: 670px
+						ul
+							max-width: 100%
+						.cart-first
+							margin-left: -15px
+						li
+							max-width: 100%
+							width: 100%
+							height: auto
+							p
+								margin-left: 0
+							li
+								max-width: 100%
+								width: 49%
+								vertical-align: top
+
 					.menu__popup.search
 						input
 							display: block !important
+							padding: 5px 40px
+							background: #dcdf3c;
+							outline: none
+							border: none
+							border-bottom: 1px solid #a4a629
 						.grid
-							height: 500px
+							min-height: 298px
+							max-width: 100%
 							.grid-item
 								display: block
-								height: 500px
+								height: auto
+								float: left
+								max-width: 33%
+								p
+									margin-left: 0
 								ul
 									li
 										height: auto !important
-										width: 25% !important
+					.search-img-two
+						width: 30px
+						position: absolute
+						position: absolute
+						right: 10px
+						top: 5px
+						background: #c2c52e
+						border-radius: 50%
+						transition: background .2s
+						&:hover
+							background: #f4f750
+					.search-img-one
+						width: 18px
+						position: absolute
+						left: 10px
+						top: 15px
+					#search
+						width: 100%
+						min-width: 100%
+						box-sizing: border-box
 					&:hover
 						background: #dcdf3c
 						.menu__popup
